Use graphql boot starter and basic authentication